# omega

./: .env.template  .gitignore  LICENCE.md  Makefile  README.md  dev.docker-compose.yml  docker-compose.yml  omega.db  omega.py  run.sh
composer/: Dockerfile
docker/: .env.template  docker-compose.yml
docker/omega/: .Dockerignore  Dockerfile  entrypoint.sh
mariadb/: Dockerfile
mariadb/db_init/: omega.sql
nginx/: Dockerfile
nginx/conf/: nginx.conf  prod.conf
oauth/: Cargo.toml  Dockerfile  entrypoint.sh
oauth/src/: main.rs  model.rs
oauth/static/: connected.html  home.html  readme.html
oauth2/: Dockerfile  composer.json
oauth2/public/: index.php  script.js  style.css
oauth2/src/: Router.php
oauth2/src/Controller/: MainController.php
oauth2/src/Model/: Manager.php
oauth2/src/View/: View.php
oauth2/src/View/layout/: api.php  connected.php  index.php  main.php
omega/: Dockerfile  maintenance.py  omega.db  omega.py
