[package]
name = "oauth"
version = "0.1.0"
authors = ["valktaelen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
reqwest = { version = "0.11.14", features = ["json"]}
rusqlite = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio-rusqlite = "0.3.0"
urlencoding = "2.1.2"
